--- a/About.html
+++ b/About.html
@@ -96,7 +96,7 @@
         <div class="footer-content">
            
             <div class="footer-links">
-                <a href="Website.html">Home</a> 
+                <a href="index.html">Home</a> 
                 <a href="About.html">About</a> 
                 <a href="services.html">Services</a> 
              
@@ -111,3 +111,4 @@
 
 </body>
 </html>
+
