--- a/services.html
+++ b/services.html
@@ -110,7 +110,7 @@
         <div class="footer-content">
            
             <div class="footer-links">
-                <a href="Website.html">Home</a> 
+                <a href="index.html">Home</a> 
                 <a href="About.html">About</a> 
                 <a href="services.html">Services</a> 
              
@@ -124,4 +124,5 @@
     </footer>
 
 </body>
+
 </html>
